--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <version>1.4.10</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.data</groupId>
+      <artifactId>screeningclustering_model</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
